fix: layout shift

--- a/src/layouts/app-layout.module.css
+++ b/src/layouts/app-layout.module.css
@@ -1,10 +1,11 @@
 .layout {
-  max-width: 105rem;
-  margin-inline: auto;
-  padding-inline: 2rem;
   display: flex;
   flex-flow: column nowrap;
+  margin-inline: auto;
+  max-width: 115rem;
   min-height: 100vh;
+  padding-inline: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .header {
