--- a/src/pages/card-view/card-view.module.css
+++ b/src/pages/card-view/card-view.module.css
@@ -1,10 +1,10 @@
 .layout {
-  column-gap: 1.5rem;
   min-height: 100dvh;
   max-width: 115rem;
+  column-gap: 1rem;
   margin-inline: auto;
   padding-inline: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .main {
